@@ -1425,72 +1425,6 @@ sha512_crypt__min_rounds = 45000
     #===================================================================
     # feature tests
     #===================================================================
-    def test_60_min_verify_time(self):
-        """test verify() honors min_verify_time"""
-        delta = .05
-        if TICK_RESOLUTION >= delta/10:
-            raise self.skipTest("timer not accurate enough")
-        min_delay = 2*delta
-        min_verify_time = 5*delta
-        max_delay = 8*delta
-
-        class TimedHash(uh.StaticHandler):
-            """psuedo hash that takes specified amount of time"""
-            name = "timed_hash"
-            delay = 0
-
-            @classmethod
-            def identify(cls, hash):
-                return True
-
-            def _calc_checksum(self, secret):
-                quicksleep(self.delay)
-                return to_unicode(secret + 'x')
-
-        # check mvt issues a warning, and then filter for remainder of test
-        with self.assertWarningList(["'min_verify_time' is deprecated"]*2):
-            cc = CryptContext([TimedHash], min_verify_time=min_verify_time,
-                admin__context__min_verify_time=min_verify_time*2)
-        warnings.filterwarnings("ignore", "'min_verify_time' is deprecated")
-
-        def timecall(func, *args, **kwds):
-            start = tick()
-            result = func(*args, **kwds)
-            return tick()-start, result
-
-        # verify genhash delay works
-        TimedHash.delay = min_delay
-        elapsed, result = timecall(TimedHash.genhash, 'stub', None)
-        self.assertEqual(result, 'stubx')
-        self.assertAlmostEqual(elapsed, min_delay, delta=delta)
-
-        # ensure min verify time is honored
-
-            # correct password
-        elapsed, result = timecall(cc.verify, "stub", "stubx")
-        self.assertTrue(result)
-        self.assertAlmostEqual(elapsed, min_delay, delta=delta)
-
-            # incorrect password
-        elapsed, result = timecall(cc.verify, "blob", "stubx")
-        self.assertFalse(result)
-        self.assertAlmostEqual(elapsed, min_verify_time, delta=delta)
-
-            # incorrect password w/ special category setting
-        elapsed, result = timecall(cc.verify, "blob", "stubx", category="admin")
-        self.assertFalse(result)
-        self.assertAlmostEqual(elapsed, min_verify_time*2, delta=delta)
-
-        # ensure taking longer emits a warning.
-        TimedHash.delay = max_delay
-        with self.assertWarningList(".*verify exceeded min_verify_time"):
-            elapsed, result = timecall(cc.verify, "blob", "stubx")
-        self.assertFalse(result)
-        self.assertAlmostEqual(elapsed, max_delay, delta=delta)
-
-        # reject values < 0
-        self.assertRaises(ValueError, CryptContext, min_verify_time=-1)
-
     def test_61_autodeprecate(self):
         """test deprecated='auto' is handled correctly"""
 
